@@ -2,7 +2,7 @@ manifestdir = $(sysconfdir)/svc/manifest/application/desktop-cache/
 methoddir = $(libdir)/svc/method/
 
 manifest_DATA = icon-cache.xml
-method_DATA = icon-cache
+method_SCRIPTS = icon-cache
 
 EXTRA_DIST = \
 	icon-cache \
